add necessary librarys

--- a/code.ipynb
+++ b/code.ipynb
@@ -2,25 +2,28 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/usr/lib/python3/dist-packages/requests/__init__.py:89: RequestsDependencyWarning: urllib3 (1.26.13) or chardet (5.1.0) doesn't match a supported version!\n",
-      "  warnings.warn(\"urllib3 ({}) or chardet ({}) doesn't match a supported \"\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "import requests as req"
+    "from bs4 import BeautifulSoup as bs\n",
+    "import requests as req\n",
+    "\n",
+    "from selenium import webdriver\n",
+    "from selenium.webdriver.common.keys import Keys\n",
+    "from selenium.webdriver.common.by import By\n",
+    "from webdriver_manager.chrome import ChromeDriverManager\n",
+    "\n",
+    "from urllib3 import disable_warnings\n",
+    "from urllib3.exceptions import InsecureRequestWarning\n",
+    "disable_warnings(InsecureRequestWarning)\n",
+    "\n",
+    "import feedparser"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -596,7 +599,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -604,102 +607,78 @@
      "output_type": "stream",
      "text": [
       " *** RSS Finder Function Started ! *** \n",
-      "'https://www.tabnak.ir' is Checking ...\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/nikafarin-ai/.local/lib/python3.10/site-packages/urllib3/connectionpool.py:1045: InsecureRequestWarning: Unverified HTTPS request is being made to host 'www.tabnak.ir'. Adding certificate verification is strongly advised. See: https://urllib3.readthedocs.io/en/1.26.x/advanced-usage.html#ssl-warnings\n",
-      "  warnings.warn(\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "'https://www.tabnak.ir/fa/rss' is Checking ...\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/nikafarin-ai/.local/lib/python3.10/site-packages/urllib3/connectionpool.py:1045: InsecureRequestWarning: Unverified HTTPS request is being made to host 'www.tabnak.ir'. Adding certificate verification is strongly advised. See: https://urllib3.readthedocs.io/en/1.26.x/advanced-usage.html#ssl-warnings\n",
-      "  warnings.warn(\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "'https://www.feed.tabnak.ir' is Checking ...\n",
-      "'https://www.FEED.tabnak.ir' is Checking ...\n",
-      "'https://www.Feed.tabnak.ir' is Checking ...\n",
-      "'https://www.RSS.tabnak.ir' is Checking ...\n",
-      "'https://www.Rss.tabnak.ir' is Checking ...\n",
-      "'https://www.rss.tabnak.ir' is Checking ...\n",
-      "'https://www.fa/rss.tabnak.ir' is Checking ...\n",
-      "'https://www.fa/RSS.tabnak.ir' is Checking ...\n",
-      "'https://www.feeds.tabnak.ir' is Checking ...\n",
-      "'https://www.FEEDS.tabnak.ir' is Checking ...\n",
-      "'https://www.Feeds.tabnak.ir' is Checking ...\n",
-      "'https://www.FEEDs.tabnak.ir' is Checking ...\n",
-      "'https://www.RssForNews.tabnak.ir' is Checking ...\n",
-      "'http://www.tabnak.ir' is Checking ...\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/nikafarin-ai/.local/lib/python3.10/site-packages/urllib3/connectionpool.py:1045: InsecureRequestWarning: Unverified HTTPS request is being made to host 'www.tabnak.ir'. Adding certificate verification is strongly advised. See: https://urllib3.readthedocs.io/en/1.26.x/advanced-usage.html#ssl-warnings\n",
-      "  warnings.warn(\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "'http://www.tabnak.ir/fa/rss' is Checking ...\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/nikafarin-ai/.local/lib/python3.10/site-packages/urllib3/connectionpool.py:1045: InsecureRequestWarning: Unverified HTTPS request is being made to host 'www.tabnak.ir'. Adding certificate verification is strongly advised. See: https://urllib3.readthedocs.io/en/1.26.x/advanced-usage.html#ssl-warnings\n",
-      "  warnings.warn(\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "'http://www.feed.tabnak.ir' is Checking ...\n",
-      "'http://www.FEED.tabnak.ir' is Checking ...\n",
-      "'http://www.Feed.tabnak.ir' is Checking ...\n",
-      "'http://www.RSS.tabnak.ir' is Checking ...\n",
-      "'http://www.Rss.tabnak.ir' is Checking ...\n",
-      "'http://www.rss.tabnak.ir' is Checking ...\n",
-      "'http://www.fa/rss.tabnak.ir' is Checking ...\n",
-      "'http://www.fa/RSS.tabnak.ir' is Checking ...\n",
-      "'http://www.feeds.tabnak.ir' is Checking ...\n",
-      "'http://www.FEEDS.tabnak.ir' is Checking ...\n",
-      "'http://www.Feeds.tabnak.ir' is Checking ...\n",
-      "'http://www.FEEDs.tabnak.ir' is Checking ...\n",
-      "'http://www.RssForNews.tabnak.ir' is Checking ...\n",
+      "'https://www.tabnak.ir' is Checking ...\n",
+      "'https://www.tabnak.ir/fa/rss' is Checking ...\n",
+      "'http://www.tabnak.ir/fa/rss' is Checking ...\n",
+      "'https://www.tabnak.ir/fa/rss/allnews' is Checking ...\n",
+      "'https://www.tabnak.ir/fa/rss/1' is Checking ...\n",
+      "'https://www.tabnak.ir/fa/rss/6' is Checking ...\n",
+      "'https://www.tabnak.ir/fa/rss/2' is Checking ...\n",
+      "'https://www.tabnak.ir/fa/rss/24' is Checking ...\n",
+      "'https://www.tabnak.ir/fa/rss/3' is Checking ...\n",
+      "'https://www.tabnak.ir/fa/rss/21' is Checking ...\n",
+      "'https://www.tabnak.ir/fa/rss/16' is Checking ...\n",
+      "'https://www.tabnak.ir/fa/rss/23' is Checking ...\n",
+      "'https://www.tabnak.ir/fa/rss/22' is Checking ...\n",
+      "'https://www.tabnak.ir/fa/rss/all/mostvisited' is Checking ...\n",
+      "'https://www.tabnak.ir/fa/rss/1/mostvisited' is Checking ...\n",
+      "'https://www.tabnak.ir/fa/rss/6/mostvisited' is Checking ...\n",
+      "'https://www.tabnak.ir/fa/rss/2/mostvisited' is Checking ...\n",
+      "'https://www.tabnak.ir/fa/rss/24/mostvisited' is Checking ...\n",
+      "'https://www.tabnak.ir/fa/rss/3/mostvisited' is Checking ...\n",
+      "'https://www.tabnak.ir/fa/rss/21/mostvisited' is Checking ...\n",
+      "'https://www.tabnak.ir/fa/rss/16/mostvisited' is Checking ...\n",
+      "'https://www.tabnak.ir/fa/rss/23/mostvisited' is Checking ...\n",
+      "'https://www.tabnak.ir/fa/rss/22/mostvisited' is Checking ...\n",
+      "'https://www.tabnak.ir/fa/rss/all/mostcommented' is Checking ...\n",
+      "'https://www.tabnak.ir/fa/rss/1/mostcommented' is Checking ...\n",
+      "'https://www.tabnak.ir/fa/rss/6/mostcommented' is Checking ...\n",
+      "'https://www.tabnak.ir/fa/rss/2/mostcommented' is Checking ...\n",
+      "'https://www.tabnak.ir/fa/rss/24/mostcommented' is Checking ...\n",
+      "'https://www.tabnak.ir/fa/rss/3/mostcommented' is Checking ...\n",
+      "'https://www.tabnak.ir/fa/rss/21/mostcommented' is Checking ...\n",
+      "'https://www.tabnak.ir/fa/rss/16/mostcommented' is Checking ...\n",
+      "'https://www.tabnak.ir/fa/rss/23/mostcommented' is Checking ...\n",
+      "'https://www.tabnak.ir/fa/rss/22/mostcommented' is Checking ...\n",
       " *** RSS Finder Function Finished ! *** \n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "[]"
+       "['https://www.tabnak.ir/fa/rss/allnews',\n",
+       " 'https://www.tabnak.ir/fa/rss/1',\n",
+       " 'https://www.tabnak.ir/fa/rss/6',\n",
+       " 'https://www.tabnak.ir/fa/rss/2',\n",
+       " 'https://www.tabnak.ir/fa/rss/24',\n",
+       " 'https://www.tabnak.ir/fa/rss/3',\n",
+       " 'https://www.tabnak.ir/fa/rss/21',\n",
+       " 'https://www.tabnak.ir/fa/rss/16',\n",
+       " 'https://www.tabnak.ir/fa/rss/23',\n",
+       " 'https://www.tabnak.ir/fa/rss/22',\n",
+       " 'https://www.tabnak.ir/fa/rss/all/mostvisited',\n",
+       " 'https://www.tabnak.ir/fa/rss/1/mostvisited',\n",
+       " 'https://www.tabnak.ir/fa/rss/6/mostvisited',\n",
+       " 'https://www.tabnak.ir/fa/rss/2/mostvisited',\n",
+       " 'https://www.tabnak.ir/fa/rss/24/mostvisited',\n",
+       " 'https://www.tabnak.ir/fa/rss/3/mostvisited',\n",
+       " 'https://www.tabnak.ir/fa/rss/21/mostvisited',\n",
+       " 'https://www.tabnak.ir/fa/rss/16/mostvisited',\n",
+       " 'https://www.tabnak.ir/fa/rss/23/mostvisited',\n",
+       " 'https://www.tabnak.ir/fa/rss/22/mostvisited',\n",
+       " 'https://www.tabnak.ir/fa/rss/all/mostcommented',\n",
+       " 'https://www.tabnak.ir/fa/rss/1/mostcommented',\n",
+       " 'https://www.tabnak.ir/fa/rss/6/mostcommented',\n",
+       " 'https://www.tabnak.ir/fa/rss/2/mostcommented',\n",
+       " 'https://www.tabnak.ir/fa/rss/24/mostcommented',\n",
+       " 'https://www.tabnak.ir/fa/rss/3/mostcommented',\n",
+       " 'https://www.tabnak.ir/fa/rss/21/mostcommented',\n",
+       " 'https://www.tabnak.ir/fa/rss/16/mostcommented',\n",
+       " 'https://www.tabnak.ir/fa/rss/23/mostcommented',\n",
+       " 'https://www.tabnak.ir/fa/rss/22/mostcommented']"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
