--- a/code.ipynb
+++ b/code.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -599,100 +599,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      " *** RSS Finder Function Started ! *** \n",
-      "'https://www.tabnak.ir' is Checking ...\n",
-      "'https://www.tabnak.ir/fa/rss' is Checking ...\n",
-      "'http://www.tabnak.ir/fa/rss' is Checking ...\n",
-      "'https://www.tabnak.ir/fa/rss/allnews' is Checking ...\n",
-      "'https://www.tabnak.ir/fa/rss/1' is Checking ...\n",
-      "'https://www.tabnak.ir/fa/rss/6' is Checking ...\n",
-      "'https://www.tabnak.ir/fa/rss/2' is Checking ...\n",
-      "'https://www.tabnak.ir/fa/rss/24' is Checking ...\n",
-      "'https://www.tabnak.ir/fa/rss/3' is Checking ...\n",
-      "'https://www.tabnak.ir/fa/rss/21' is Checking ...\n",
-      "'https://www.tabnak.ir/fa/rss/16' is Checking ...\n",
-      "'https://www.tabnak.ir/fa/rss/23' is Checking ...\n",
-      "'https://www.tabnak.ir/fa/rss/22' is Checking ...\n",
-      "'https://www.tabnak.ir/fa/rss/all/mostvisited' is Checking ...\n",
-      "'https://www.tabnak.ir/fa/rss/1/mostvisited' is Checking ...\n",
-      "'https://www.tabnak.ir/fa/rss/6/mostvisited' is Checking ...\n",
-      "'https://www.tabnak.ir/fa/rss/2/mostvisited' is Checking ...\n",
-      "'https://www.tabnak.ir/fa/rss/24/mostvisited' is Checking ...\n",
-      "'https://www.tabnak.ir/fa/rss/3/mostvisited' is Checking ...\n",
-      "'https://www.tabnak.ir/fa/rss/21/mostvisited' is Checking ...\n",
-      "'https://www.tabnak.ir/fa/rss/16/mostvisited' is Checking ...\n",
-      "'https://www.tabnak.ir/fa/rss/23/mostvisited' is Checking ...\n",
-      "'https://www.tabnak.ir/fa/rss/22/mostvisited' is Checking ...\n",
-      "'https://www.tabnak.ir/fa/rss/all/mostcommented' is Checking ...\n",
-      "'https://www.tabnak.ir/fa/rss/1/mostcommented' is Checking ...\n",
-      "'https://www.tabnak.ir/fa/rss/6/mostcommented' is Checking ...\n",
-      "'https://www.tabnak.ir/fa/rss/2/mostcommented' is Checking ...\n",
-      "'https://www.tabnak.ir/fa/rss/24/mostcommented' is Checking ...\n",
-      "'https://www.tabnak.ir/fa/rss/3/mostcommented' is Checking ...\n",
-      "'https://www.tabnak.ir/fa/rss/21/mostcommented' is Checking ...\n",
-      "'https://www.tabnak.ir/fa/rss/16/mostcommented' is Checking ...\n",
-      "'https://www.tabnak.ir/fa/rss/23/mostcommented' is Checking ...\n",
-      "'https://www.tabnak.ir/fa/rss/22/mostcommented' is Checking ...\n",
-      " *** RSS Finder Function Finished ! *** \n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "['https://www.tabnak.ir/fa/rss/allnews',\n",
-       " 'https://www.tabnak.ir/fa/rss/1',\n",
-       " 'https://www.tabnak.ir/fa/rss/6',\n",
-       " 'https://www.tabnak.ir/fa/rss/2',\n",
-       " 'https://www.tabnak.ir/fa/rss/24',\n",
-       " 'https://www.tabnak.ir/fa/rss/3',\n",
-       " 'https://www.tabnak.ir/fa/rss/21',\n",
-       " 'https://www.tabnak.ir/fa/rss/16',\n",
-       " 'https://www.tabnak.ir/fa/rss/23',\n",
-       " 'https://www.tabnak.ir/fa/rss/22',\n",
-       " 'https://www.tabnak.ir/fa/rss/all/mostvisited',\n",
-       " 'https://www.tabnak.ir/fa/rss/1/mostvisited',\n",
-       " 'https://www.tabnak.ir/fa/rss/6/mostvisited',\n",
-       " 'https://www.tabnak.ir/fa/rss/2/mostvisited',\n",
-       " 'https://www.tabnak.ir/fa/rss/24/mostvisited',\n",
-       " 'https://www.tabnak.ir/fa/rss/3/mostvisited',\n",
-       " 'https://www.tabnak.ir/fa/rss/21/mostvisited',\n",
-       " 'https://www.tabnak.ir/fa/rss/16/mostvisited',\n",
-       " 'https://www.tabnak.ir/fa/rss/23/mostvisited',\n",
-       " 'https://www.tabnak.ir/fa/rss/22/mostvisited',\n",
-       " 'https://www.tabnak.ir/fa/rss/all/mostcommented',\n",
-       " 'https://www.tabnak.ir/fa/rss/1/mostcommented',\n",
-       " 'https://www.tabnak.ir/fa/rss/6/mostcommented',\n",
-       " 'https://www.tabnak.ir/fa/rss/2/mostcommented',\n",
-       " 'https://www.tabnak.ir/fa/rss/24/mostcommented',\n",
-       " 'https://www.tabnak.ir/fa/rss/3/mostcommented',\n",
-       " 'https://www.tabnak.ir/fa/rss/21/mostcommented',\n",
-       " 'https://www.tabnak.ir/fa/rss/16/mostcommented',\n",
-       " 'https://www.tabnak.ir/fa/rss/23/mostcommented',\n",
-       " 'https://www.tabnak.ir/fa/rss/22/mostcommented']"
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "rssfinder_function(\"www.tabnak.ir\")"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "rssfinder_function(url)"
+   ]
   }
  ],
  "metadata": {
